<resources>
    <string name="app_name">FarmerPortal</string>
    <string name="signUpConsumer">Login as Consumer</string>
    <string name="signUpFarmer"> Login as Farmer</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="loginCap">LOGIN</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone Number</string>

</resources>
