<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimagefarmer"
    android:orientation="vertical"
    tools:context=".LoginConsumer">

    <EditText
        android:id="@+id/luser"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:maxLines="1"
        android:singleLine="true"
        android:background="?attr/actionModeBackground"
        android:drawableLeft="@drawable/username1"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/lpass"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="?attr/actionModeBackground"
        android:maxLines="1"
        android:singleLine="true"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/showPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Show Password" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/notRegister"
            android:layout_width="257dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/not_registered"
            android:textColor="#070404"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/regis"
            android:layout_width="92dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:background="?attr/actionModeBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textColor="?attr/colorPrimaryDark"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>